# advent-of-code-python

./: .coveragerc  .editorconfig  .flake8  .gitignore  README.md  main.py  mypy.ini  pyproject.toml
app/: __init__.py  base_solver.py  utils.py
app/console/: __init__.py
app/y2015/: __init__.py  d01_not_quite_lisp.py  d02_i_was_told_there_would_be_no_math.py  d03_perfectly_spherical_houses_in_a_vacuum.py  d04_the_ideal_stocking_stuffer.py  d05_doesnt_he_have_intern_elves_for_this.py  d06_probably_a_fire_hazard.py  d21_rpg_simulator_20xx.py
app/y2019/: __init__.py  d01_the_tyranny_of_the_rocket_equation.py
app/y2020/: __init__.py  d01_report_repair.py  d02_password_philosophy.py  d03_toboggan_trajectory.py  d04_passport_processing.py  d05_binary_boarding.py  d06_custom_customs.py  d07_handy_haversacks.py  d08_handheld_halting.py  d09_encoding_error.py  d10_adapter_array.py  d11_seating_system.py
input/2015/06/: example_1.txt  example_2.txt
resources/: template.py
tests/: __init__.py  conftest.py  day_test.py  register.py  solution_test.py
tests/y2015/: d21_rpg_simulator_20xx_test.py
tests/y2020/: d09_encoding_error_test.py
