[tool.poetry]
name = "advent-of-code-python"
version = "0.1.0"
description = ""
authors = ["Marcus Bolmstedt <marcus@bolmstedt.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.3.0"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-if-expr = "^1.0.4"
flake8-isort = "^4.0.0"
flake8-logging-format = "^0.6.0"
pep8-naming = "^0.11.1"
flake8-print = "^4.0.0"
flake8-pytest = "^1.3"
flake8-quotes = "^3.2.0"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

